--- a/website/libcal/page-templates/libcal-homepage-templates.html
+++ b/website/libcal/page-templates/libcal-homepage-templates.html
@@ -1,5 +1,6 @@
+/* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* LIBCAL HOMEPAGE TEMPLATES */
-/* https://libcal.usfca.edu/admin/look-and-feel/homepage#s-lc-tab-homepage */
+/* ADMIN > LOOK & FEEL > HOMEPAGE EDITOR */
 
 /* UPCOMING EVENTS TEMPLATE */
 
