--- a/website/libcal/page-templates/libcal-event-page-template.html
+++ b/website/libcal/page-templates/libcal-event-page-template.html
@@ -1,5 +1,6 @@
+/* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
 /* LIBCAL EVENT PAGE TEMPLATES */
-/* https://libcal.usfca.edu/admin/look-and-feel/event#s-lc-tab-event */
+/* ADMIN > LOOK & FEEL > EVENT PAGE EDITOR */
 
 /* EVENT TITLE — FULL WIDTH */
 
