--- a/website/global/gleeson-global-footer.html
+++ b/website/global/gleeson-global-footer.html
@@ -1,3 +1,6 @@
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- GLOBAL FOOTER FOR LIBGUIDES, LIBANSWERS, LIBCAL -->
+
 <div class="cc--component-container cc--footer ">
     <div class="c--component c--footer">
         <div class="footer-main container">
