--- a/website/global/gleeson-global-header.html
+++ b/website/global/gleeson-global-header.html
@@ -1,3 +1,6 @@
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- GLOBAL HEADER FOR LIBGUIDES, LIBANSWERS, LIBCAL -->
+
 <header>
     <nav class="navbar gleeson navbar-static-top">
         <div class="header-top container">
