--- a/website/libcal/page-templates/libcal-event-page-template.html
+++ b/website/libcal/page-templates/libcal-event-page-template.html
@@ -1,12 +1,12 @@
-/* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* LIBCAL EVENT PAGE TEMPLATES */
-/* ADMIN > LOOK & FEEL > EVENT PAGE EDITOR */
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- LIBCAL EVENT PAGE TEMPLATES -->
+<!-- ADMIN > LOOK & FEEL > EVENT PAGE EDITOR -->
 
-/* EVENT TITLE — FULL WIDTH */
+<!-- EVENT TITLE — FULL WIDTH -->
 
 <h1 class="media-heading">{{title}}</h1>
 
-/* EVENT DESCRIPTION TEMPLATE — LEFT COLUMN / 75% */
+<!-- EVENT DESCRIPTION TEMPLATE — LEFT COLUMN / 75% -->
 
 <div class="row">
     <div class="col-md-12">
@@ -177,7 +177,7 @@
 
 </script>
 
-/* EVENT DESCRIPTION TEMPLATE — RIGHT COLUMN / 25% */
+<!-- EVENT DESCRIPTION TEMPLATE — RIGHT COLUMN / 25% -->
 
 {{#single_event}}
     <div class="s-lc-display-date">{{date}} <span class="s-lc-event-time">{{start}} – {{end}}</span></div>
