--- a/website/libcal/page-templates/libcal-homepage-templates.html
+++ b/website/libcal/page-templates/libcal-homepage-templates.html
@@ -1,8 +1,8 @@
-/* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* LIBCAL HOMEPAGE TEMPLATES */
-/* ADMIN > LOOK & FEEL > HOMEPAGE EDITOR */
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- LIBCAL HOMEPAGE TEMPLATES -->
+<!-- ADMIN > LOOK & FEEL > HOMEPAGE EDITOR -->
 
-/* UPCOMING EVENTS TEMPLATE */
+<!-- UPCOMING EVENTS TEMPLATE -->
 
 <div class="media s-lc-c-evt">
     <div class="media-body">
