--- a/website/libguides/page-templates/LIVE-Guide-SideNav-MultiPage-Template.html
+++ b/website/libguides/page-templates/LIVE-Guide-SideNav-MultiPage-Template.html
@@ -1,5 +1,6 @@
-<!--TEMPLATE FOR SIDE-NAV MULTI-PAGE GUIDES WITH PLAIN HEADERS-->
-<!--Last Edit: 11/22/2024-->
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- TEMPLATE FOR SIDE-NAV MULTI-PAGE GUIDES WITH PLAIN HEADERS -->
+<!-- LAST EDIT: 11/22/2024 -->
 
 <body class="s-lg-guide-body">
     {{skip_link}}
