--- a/website/libcal/page-templates/libcal-hours-page-template.html
+++ b/website/libcal/page-templates/libcal-hours-page-template.html
@@ -1,5 +1,5 @@
-/* GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO */
-/* CUSTOM LIBCAL HOURS PAGE TEMPLATES */
-/* ADMIN > LOOK & FEEL > HOURS PAGE EDITOR */
+<!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
+<!-- CUSTOM LIBCAL HOURS PAGE TEMPLATES -->
+<!-- ADMIN > LOOK & FEEL > HOURS PAGE EDITOR -->
 
 TBD
