updates to code descriptions

--- a/website/global/gleeson-global-header.html
+++ b/website/global/gleeson-global-header.html
@@ -1,5 +1,5 @@
 <!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
-<!-- GLOBAL HEADER FOR LIBGUIDES, LIBANSWERS, LIBCAL -->
+<!-- GLOBAL HEADER FOR LIBGUIDES (LEGACY), LIBANSWERS, LIBCAL -->
 
 <header>
     <nav class="navbar gleeson navbar-static-top">
