--- a/website/libguides/gleeson-libguides-header-bs5.html
+++ b/website/libguides/gleeson-libguides-header-bs5.html
@@ -1,5 +1,5 @@
 <!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
-<!-- HEADER FOR LIBGUIDES -- BOOTSRAP 5 -->
+<!-- HEADER FOR LIBGUIDES (NEW) -- BOOTSRAP 5 -->
 
 <nav id="gleeson" class="navbar navbar-expand-lg flex-column">
     <div class="container">
