updates to code descriptions

--- a/website/global/gleeson-global-footer.html
+++ b/website/global/gleeson-global-footer.html
@@ -1,5 +1,5 @@
 <!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
-<!-- GLOBAL FOOTER FOR LIBGUIDES, LIBANSWERS, LIBCAL -->
+<!-- GLOBAL FOOTER FOR LIBGUIDES (LEGACY & NEW), LIBANSWERS, LIBCAL -->
 
 <div class="cc--component-container cc--footer ">
     <div class="c--component c--footer">
