Staff Resources links update

--- a/website/global/gleeson-global-footer.html
+++ b/website/global/gleeson-global-footer.html
@@ -1,5 +1,6 @@
 <!-- GLEESON LIBRARY -- UNIVERSITY OF SAN FRANCISCO -->
 <!-- GLOBAL FOOTER FOR LIBGUIDES (LEGACY & NEW), LIBANSWERS, LIBCAL -->
+<!-- LAST EDIT: 07/04/25 -->
 
 <div class="cc--component-container cc--footer ">
     <div class="c--component c--footer">
@@ -140,12 +141,12 @@
                                         </a>
                                     </li>
                                     <li class="menu-item  ">
-                                        <a href="https://library.usfca.edu/internal">
+                                        <a href="https://library.usfca.edu/library-staff-guides">
                                             Staff Guides
                                         </a>
                                     </li>
                                     <li class="menu-item  ">
-                                        <a href="https://usfca.libapps.com/libapps/">
+                                        <a href="https://library.usfca.edu/website-management">
                                             LibApps Login
                                         </a>
                                     </li>
