--- a/website/global/gleeson-global-footer.html
+++ b/website/global/gleeson-global-footer.html
@@ -147,7 +147,7 @@
                                     </li>
                                     <li class="menu-item  ">
                                         <a href="https://library.usfca.edu/website-management">
-                                            LibApps Login
+                                            Website Management
                                         </a>
                                     </li>
                                 </ul><!-- m--menu -->
